[tool.poetry]
name = "frax-analysis"
version = "0.1.0"
description = ""
authors = ["lhl <lhl@randomfoo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
