[tool.poetry]
name = "frax-analysis"
version = "0.1.0"
description = ""
authors = ["lhl <lhl@randomfoo.net>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.2"
httpx = "^0.22.0"
web3 = "^5.28.0"
tabulate = "^0.8.9"
Flask = "^2.0.3"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterthemes = "^0.20.0"
jupyterlab = "^3.2.9"
jupyterlab-vim = "^0.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
